--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
-    <string name="app_name">ToDo</string>
-    <string name="action_add">Add</string>
-    <string name="action_delete">Delete</string>
+    <string name="app_name">HTApp</string>
     <string name="choose_date_time">Choose a Date and Time</string>
     <string name="str_month_name">December</string>
 
